[package]
name = "keplr-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.7.1"
sha256 = "1.4.0"
ripemd = "0.1.3"
bech32 = "0.9"
hex = "0.4"
bitcoin_hashes = "0.13.0"
base64 = "0.20"
k256 = "0.13.1"

sha3 = "0.10.8"
ethereum-types = "0.14"

tendermint = { version =  "0.28.0", features = ["secp256k1"] }